--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.7.15-M1</version>
         </dependency>
+        <dependency>
+            <groupId>org.loadui</groupId>
+            <artifactId>testFx</artifactId>
+            <version>3.1.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
